--- a/config/locales/server.de.yml
+++ b/config/locales/server.de.yml
@@ -1471,6 +1471,8 @@ de:
     fixed_category_positions_on_create: "Wenn diese Option aktiviert ist, wird die Reihenfolge der Kategorien im Dialog zur Themenerstellung beibehalten (erfordert fixed_category_positions)."
     add_rel_nofollow_to_user_content: 'Füge mit Ausnahme interner Links (schließt übergeordnete Domains ein) allen benutzergenerierten Inhalten „rel nofollow“ hinzu. Die Änderung dieser Einstellung erfordert, dass du sämtliche Beiträge aktualisierst: „rake posts:rebake“'
     exclude_rel_nofollow_domains: "Eine Liste von Domains, bei denen nofollow bei Links nicht hinzugefügt werden soll. example.com wird automatisch auch Subdomains wie sub.example.com erlauben. Zumindest solltest du die Domain dieser Website hinzufügen, um Webcrawlern zu helfen, alle Inhalte zu finden. Wenn andere Teile der Website auf anderen Domains liegen, füge auch diese hinzu."
+    max_form_template_title_length: "Maximal zulässige Länge für Titel von Formularvorlagen."
+    max_form_template_content_length: "Maximal zulässige Länge für den Inhalt der Formularvorlage."
     post_excerpt_maxlength: "Maximale Länge eines Beitrags-Auszuges bzw. -Zusammfassung."
     topic_excerpt_maxlength: "Maximale Länge eines Themenauszugs/einer Zusammenfassung, generiert aus dem ersten Beitrag eines Themas."
     default_subcategory_on_read_only_category: "Aktiviert die Schaltfläche \"Neues Thema\" und wählt eine Standard-Unterkategorie aus, um in Kategorien zu posten, in denen der Nutzer kein neues Thema erstellen darf."
@@ -2139,6 +2141,7 @@ de:
     remove_muted_tags_from_latest: "Themen, die nur mit stummgeschalteten Tags versehen sind, nicht in der Liste der aktuellen Themen anzeigen"
     force_lowercase_tags: "Kleinschreibung für alle neuen Schlagwörter erzwingen."
     create_post_for_category_and_tag_changes: "Erstelle einen kleinen Aktionsbeitrag, wenn sich die Kategorie oder die Tags eines Themas ändern"
+    watched_precedence_over_muted: "Benachrichtige mich über Themen in Kategorien oder Schlagwörtern, die ich beobachte und die auch zu einem Thema gehören, das ich stummgeschaltet habe"
     company_name: "Firmenname"
     governing_law: "Anzuwendendes Recht"
     city_for_disputes: "Stadt für Rechtsstreitigkeiten"
@@ -2202,6 +2205,7 @@ de:
       pop3_polling_password_is_empty: "Du musst „pop3 polling password“ definieren, um POP3-Abfragen zu aktivieren."
       pop3_polling_authentication_failed: "POP3-Authentifizierung ist fehlgeschlagen. Bitte überprüfe die POP3-Anmeldedaten."
       reply_by_email_address_is_empty: "Du musst „reply by email address“ definieren, bevor Antworten per E-Mail aktiviert wird."
+      email_polling_disabled: "Du musst entweder die manuelle Abfrage, die POP3-Abfrage oder eine benutzerdefinierte E-Mail-Abfrage aktivieren, bevor du die Antwort per E-Mail aktivieren kannst."
       user_locale_not_enabled: "Du musst erst „allow user locale“ aktivieren, bevor du diese Einstellung aktivierst."
       personal_message_enabled_groups_invalid: "Du musst mindestens eine Gruppe für diese Einstellung angeben. Wenn du nicht möchtest, dass jemand außer den Team-Mitgliedern private Nachrichten verschickt, wähle die Team-Gruppe aus."
       invalid_regex: "Regulärer Ausdruck ist ungültig oder nicht erlaubt."
