--- a/plugins/chat/config/locales/client.ar.yml
+++ b/plugins/chat/config/locales/client.ar.yml
@@ -275,6 +275,7 @@ ar:
         followed: "انضم"
         mobile_notification_level: "الإشعارات الفورية للجوَّال"
         mute: "كتم القناة"
+        threading_disabled: "متوقفة"
         muted_on: "تشغيل"
         muted_off: "إيقاف"
         notifications: "الإشعارات"
@@ -401,12 +402,12 @@ ar:
           tracking:
             title: "التتبُّع"
         participants_other_count:
-          zero: "+%{count} آخرين"
-          one: "+%{count} آخر"
-          two: "+%{count} آخران"
-          few: "+%{count} آخرين"
-          many: "+%{count} آخرين"
-          other: "+%{count} آخرين"
+          zero: "+%{count}"
+          one: "+%{count}"
+          two: "+%{count}"
+          few: "+%{count}"
+          many: "+%{count}"
+          other: "+%{count}"
       draft_channel_screen:
         header: "رسالة جديدة"
         cancel: "إلغاء"
