--- a/plugins/chat/config/locales/client.bs_BA.yml
+++ b/plugins/chat/config/locales/client.bs_BA.yml
@@ -73,6 +73,8 @@ bs_BA:
       settings:
         follow: "Učlani se"
         followed: "Pridružio se"
+        threading_enabled: "Omogućen"
+        threading_disabled: "Neomogućen"
         notifications: "Obavijest"
         preview: "Pregled"
         save: "Save"
