--- a/plugins/chat/config/locales/client.fa_IR.yml
+++ b/plugins/chat/config/locales/client.fa_IR.yml
@@ -223,6 +223,7 @@ fa_IR:
         follow: "عضو شدن"
         followed: "عضو شده"
         mute: "بی‌صدا کردن کانال"
+        threading_disabled: "غیرفعال"
         muted_on: "روشن"
         muted_off: "خاموش"
         notifications: "اعلان‌ها"
