--- a/plugins/chat/config/locales/client.el.yml
+++ b/plugins/chat/config/locales/client.el.yml
@@ -73,6 +73,7 @@ el:
       settings:
         follow: "Γίνετε μέλος"
         followed: "Έγινε μέλος"
+        threading_disabled: "Απενεργοποιημένο"
         notifications: "Ειδοποιήσεις"
         preview: "Προεπισκόπηση"
         save: "Αποθήκευση"
