--- a/plugins/chat/config/locales/client.lt.yml
+++ b/plugins/chat/config/locales/client.lt.yml
@@ -76,6 +76,8 @@ lt:
       settings:
         follow: "Prisijungti"
         followed: "Prisijungė"
+        threading_enabled: "Galimas"
+        threading_disabled: "Uždrausta"
         notifications: "Pranešimai"
         preview: "Peržiūrėti"
         save: "Išsaugoti"
@@ -121,6 +123,11 @@ lt:
             title: "Įprastas"
           tracking:
             title: "Seku"
+        participants_other_count:
+          one: "+%{count}"
+          few: "+%{count}"
+          many: "+%{count}"
+          other: "+%{count}"
       draft_channel_screen:
         header: "Nauja žinutė"
         cancel: "Atšaukti"
