--- a/plugins/chat/config/locales/client.pt_BR.yml
+++ b/plugins/chat/config/locales/client.pt_BR.yml
@@ -15,6 +15,7 @@ pt_BR:
           actions:
             chat_channel_status_change: "Status do canal de chat alterado"
             chat_channel_delete: "Canal de chat excluído"
+            chat_auto_remove_membership: "Assinaturas removidas automaticamente dos canais"
       api:
         scopes:
           descriptions:
@@ -38,6 +39,9 @@ pt_BR:
       browse_all_channels: "Navegar por todos os canais"
       move_to_channel:
         title: "Mover mensagens para o canal"
+        instructions:
+          one: "Você está movendo <strong>%{count}</strong> mensagem. Selecione o canal de destino. Uma mensagem de placeholder será criada no canal <strong>%{channelTitle}</strong> para indicar que esta mensagem foi movida. Note que as respostas não serão movidas junto para o novo canal, e mensagens no antigo canal não serão mais exibidas como respostas às mensagens movidas."
+          other: "Você está movendo <strong>%{count}</strong> mensagens. Selecione o canal de destino. Uma mensagem de placeholder será criada no canal <strong>%{channelTitle}</strong> para indicar que estas mensagens foram movidas. Note que as respostas não serão movidas junto para o novo canal, e mensagens no antigo canal não serão mais exibidas como respostas às mensagens movidas."
         confirm_move: "Mover mensagens"
       channel_settings:
         title: "Definições do canal"
@@ -68,6 +72,7 @@ pt_BR:
         instructions: "Fechar o canal impede que usuários(as) não funcionários(as) enviem novas mensagens ou editem mensagens existentes. Tem certeza de que deseja fechar este canal?"
       channel_delete:
         title: "Excluir canal"
+        instructions: "<p>Exclui o canal e histórico de chat de <strong>%{name}</strong> . Todas as mensagens e dados relacionados, como as reações e uploads, serão permanentemente excluídos. Se você deseja preservar o histórico do canal e apenas desativá-lo, talvez seja melhor arquivá-lo</p><p>Tem certeza que quer <strong>excluir permanentemente</strong> o canal? Para confirmar, escreva o nome do canal no campo abaixo.</p>"
         confirm: "Eu entendo as consequências, exclua o canal"
         confirm_channel_name: "Digite o nome do canal"
         process_started: "O processo para excluir o canal foi iniciado. Este modal será fechado em breve, você não verá mais o canal excluído em lugar algum."
@@ -77,6 +82,7 @@ pt_BR:
       click_to_join: "Clique aqui para visualizar os canais disponíveis."
       close: "Fechar"
       collapse: "Recolher gaveta de chat"
+      expand: "Expandir Chat"
       confirm_flag: "Tem certeza de que deseja sinalizar a mensagem de %{username}?"
       hidden: "Uma mensagem foi ocultada. [view]"
       delete: "Excluir"
@@ -93,6 +99,7 @@ pt_BR:
         title: "Notificações por e-mail"
         when_away: "Só quando estiver ausente"
       header_indicator_preference:
+        title: "Mostrar indicador de atividade no cabeçalho"
         all_new: "Todas as Novas Mensagens"
         dm_and_mentions: "Mensagens Diretas e Menções"
         never: "Nunca"
@@ -107,26 +114,49 @@ pt_BR:
       join: "Participar"
       last_visit: "último acesso"
       summarization:
+        title: "Resumir mensagens"
+        description: "Selecione uma opção abaixo para resumir a conversa enviada durante o período desejado."
         summarize: "Resumir"
+        since:
+          one: "Última hora"
+          other: "Últimas %{count} horas"
       mention_warning:
         dismiss: "ignorar"
+        cannot_see: "%{username} não pode acessar este canal e não foi notificado."
+        cannot_see_multiple:
+          one: "%{username} e %{count} outro usuário não podem acessar este canal e não foram notificados"
+          other: "%{username} e %{count} outros usuários não podem acessar este canal e não foram notificados"
         invitations_sent:
           one: "Convite enviado"
           other: "Convites enviados"
         invite: "convidar para canal"
         without_membership: "%{username} não entrou neste canal."
+        without_membership_multiple:
+          one: "%{username} e %{count} outro usuário não se juntaram a este canal"
+          other: "%{username} e %{count} outros usuários não se juntaram a este canal"
         group_mentions_disabled: "%{group_name} não permite menções."
+        group_mentions_disabled_multiple:
+          one: "%{group_name} e %{count} outro grupo não permitem menções"
+          other: "%{group_name} e %{count} outros grupos não permitem menções"
         too_many_members: "%{group_name} tem membros demais. Ninguém foi notificado."
+        too_many_members_multiple:
+          one: "%{group_name} e %{count} outro grupo têm membros demais. Ninguém foi notificado."
+          other: "%{group_name} e %{count} outros grupos têm membros demais. Ninguém foi notificado."
         groups:
           header:
             some: "Alguns usuários não serão notificados"
             all: "Ninguém será notificado"
           unreachable_1: "@%{group} não permite menções."
+          unreachable_2: "@%{group1} e @%{group2} não permitem menções"
+          unreachable_multiple:
+            one: "@%{group} e %{count} outro grupo não permitem menções"
+            other: "@%{group} e %{count} outros grupos não permitem menções"
       aria_roles:
         header: "Cabeçalho do chat"
         composer: "Compositor de chat"
         channels_list: "Lista de canais de chat"
       no_public_channels: "Você não entrou em nenhum canal."
+      kicked_from_channel: "Você não pode mais acessar este canal."
       only_chat_push_notifications:
         title: "Enviar apenas notificações por push"
         description: "Bloquear envio de todas as notificações por push não relacionadas a chat"
@@ -138,8 +168,15 @@ pt_BR:
       close_full_page: "Fechar chat em tela cheia"
       open_message: "Abrir mensagem no chat"
       placeholder_self: "Anotar algo"
+      placeholder_channel: "Converse em %{channelName}"
+      placeholder_thread: "Converse no tópico"
       placeholder_users: "Conversar com %{commaSeparatedNames}"
+      placeholder_new_message_disallowed:
+        archived: "Canal arquivado, não é possível enviar novas mensagens no momento."
+        closed: "Canal fechado, não é possível enviar novas mensagens no momento."
+        read_only: "Canal somente para leitura, não é possível enviar novas mensagens no momento."
       placeholder_silenced: "Você não pode enviar mensagens neste momento."
+      placeholder_start_conversation: "Iniciar uma conversa com ..."
       placeholder_start_conversation_users: "Iniciar uma conversa com %{commaSeparatedUsernames}"
       remove_upload: "Remover arquivo"
       react: "Reagir com emoji"
@@ -157,6 +194,7 @@ pt_BR:
       save: "Salvar"
       select: "Selecionar"
       return_to_list: "Retornar para lista de canais"
+      return_to_threads_list: "Retornar às discussões em andamento"
       scroll_to_bottom: "Rolar para a parte inferior"
       scroll_to_new_messages: "Ver novas mensagens"
       sound:
@@ -267,6 +305,7 @@ pt_BR:
       settings:
         channel_wide_mentions_label: "Permitir menções @all e @here"
         channel_wide_mentions_description: "Permitir que os usuários notifiquem todos os membros de #%{channel} com @all ou apenas aqueles que estão ativos no momento com @here"
+        channel_threading_label: "Discussões"
         auto_join_users_label: "Adicionar usuários(as) automaticamente"
         auto_join_users_warning: "Todos(as) os(as) usuários(as) que não são membros deste canal e têm acesso à categoria %{category} participarão. Tem certeza?"
         desktop_notification_level: "Notificações do desktop"
@@ -274,6 +313,8 @@ pt_BR:
         followed: "Entrou"
         mobile_notification_level: "Notificações por push em dispositivos móveis"
         mute: "Silenciar canal"
+        threading_enabled: "Ativado"
+        threading_disabled: "Desativado(a)"
         muted_on: "Ligado"
         muted_off: "Desligado"
         notifications: "Notificações"
@@ -284,6 +325,8 @@ pt_BR:
         admin_title: "Administrador(a)"
       admin:
         title: "Chat"
+        export_messages:
+          title: "Exportar mensagens do chat"
       direct_messages:
         title: "Chat pessoal"
         new: "Criar um chat pessoal"
@@ -384,8 +427,8 @@ pt_BR:
           tracking:
             title: "Monitorando"
         participants_other_count:
-          one: "+mais %{count}"
-          other: "+mais %{count}"
+          one: "+%{count}"
+          other: "+%{count}"
       threads:
         open: "Tópico Aberto"
       draft_channel_screen:
